<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.testprojectprocesstabs.MainActivity" >

    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_new"/>
    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_open"/>
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_export"/>
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_close"/>
 	<item
        android:id="@+id/action_closeall"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_closeall"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
